[metadata]
name = kdmukai_bitcoinreserve
version = 0.0.1
author = kdmukai
author_email = kdmukai@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdmukai/specterext-bitcoinreserve/issues
project_urls =
    Bug Tracker = https://github.com/kdmukai/specterext-bitcoinreserve/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: specter :: Extension

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src